--- a/build.gradle
+++ b/build.gradle
@@ -19,3 +19,15 @@ allprojects {
     google()
   }
 }
+
+plugins {
+  id "org.sonarqube" version "2.8"
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "designerferro_android-hello-world"
+    property "sonar.organization", "designerferro-github"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
