--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,3 +11,17 @@ jobs:
       - checkout
       - run:
           command: ./gradlew build
+  build:
+    docker:
+      - image: 'circleci/openjdk:11-jdk'
+    steps:
+      - checkout
+      - run:
+          name: Analyze on SonarCloud
+          command: gradle build sonarqube
+
+workflows:
+  main:
+    jobs:
+      - build:
+          context: SonarCloud
