--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,22 @@ buildscript {
 plugins {
   id "org.sonarqube" version "2.8"
 }
-
-sonarqube {
-  properties {
-    property "sonar.projectKey", "designerferro_android-hello-world"
-    property "sonar.organization", "designerferro-github"
-    property "sonar.host.url", "https://sonarcloud.io"
-  }
+  
+  sonarqube {
+    properties {
+        property "sonar.projectName", "android-hello-world "
+        property "sonar.projectKey", "designerferro_android-hello-world"
+     //   property "sonar.tests", ["src/test/java"]
+     //   property "sonar.test.inclusions", "**/*Test*/**"
+        property "sonar.sourceEncoding", "UTF-8"
+        property "sonar.sources", "."
+        property "sonar.exclusions", '**/*Test*/**,' +
+                '*.json,' +
+                '**/*test*/**,' +
+                '**/.gradle/**,' +
+                '**/R.class'
+               }
+          }
   
   repositories {
     jcenter()
