--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ buildscript {
     properties {
         property "sonar.projectName", "android-hello-world "
         property "sonar.projectKey", "designerferro_android-hello-world"
+        property "sonar.organization", "designerferro-github"
+        property "sonar.host.url", "https://sonarcloud.io"
      //   property "sonar.tests", ["src/test/java"]
      //   property "sonar.test.inclusions", "**/*Test*/**"
         property "sonar.sourceEncoding", "UTF-8"
@@ -28,7 +30,7 @@ buildscript {
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:3.5.3'
-    classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.8'
+//    classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.8'
 
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
