--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,9 @@ buildscript {
     google()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.5.3'
+      classpath 'com.android.tools.build:gradle:3.5.3'
 //    classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.8'
+      classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.8"
 
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
