--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,53 @@ buildscript {
         property "sonar.projectKey", "designerferro_android-hello-world"
         property "sonar.organization", "designerferro-github"
         property "sonar.host.url", "https://sonarcloud.io"
-     //   property "sonar.tests", ["src/test/java"]
+     //   property "sonar.tests", ["src/test/java"]// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+
+  plugins {
+    id 'org.sonarqube' version '2.8'
+  }
+  
+  sonarqube {
+    properties {
+        property 'sonar.projectName', 'android-hello-world '
+        property 'sonar.projectKey', 'designerferro_android-hello-world'
+        property 'sonar.organization', 'designerferro-github'
+        property 'sonar.host.url', 'https://sonarcloud.io'
+     //   property 'sonar.tests', ['src/test/java']
+     //   property 'sonar.test.inclusions', '**/*Test*/**'
+        property 'sonar.sourceEncoding', 'UTF-8'
+        property 'sonar.sources', '.'
+        property 'sonar.exclusions', '**/*Test*/**,' +
+                '*.json,' +
+                '**/*test*/**,' +
+                '**/.gradle/**,' +
+                '**/R.class'
+               }
+          }
+  
+  repositories {
+    jcenter()
+    google()
+  }
+  dependencies {
+      classpath 'com.android.tools.build:gradle:3.5.3'
+
+    // NOTE: Do not place your application dependencies here; they belong
+    // in the individual module build.gradle files
+  }
+// }
+
+allprojects {
+  repositories {
+    jcenter()
+    google()
+  }
+}
+
+}
+
      //   property "sonar.test.inclusions", "**/*Test*/**"
         property "sonar.sourceEncoding", "UTF-8"
         property "sonar.sources", "."
